--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-        xmlns="http://maven.apache.org/POM/4.0.0"
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.rxliuli</groupId>
     <artifactId>rx-easy-excel</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <developers>
         <developer>
             <name>rxliuli</name>
@@ -17,7 +14,8 @@
         <connection>scm:git:https://github.com/rxliuli/rx-easy-excel.git</connection>
         <url>https://github.com/rxliuli/rx-easy-excel</url>
         <developerConnection>scm:git:git@github.com:rxliuli/rx-easy-excel.git</developerConnection>
-    </scm>
+      <tag>rx-easy-excel-1.0.0</tag>
+  </scm>
 
     <properties>
         <poi.version>3.17</poi.version>
