--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.rxliuli</groupId>
     <artifactId>rx-easy-excel</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
     <developers>
         <developer>
             <name>rxliuli</name>
@@ -14,7 +14,7 @@
         <connection>scm:git:https://github.com/rxliuli/rx-easy-excel.git</connection>
         <url>https://github.com/rxliuli/rx-easy-excel</url>
         <developerConnection>scm:git:git@github.com:rxliuli/rx-easy-excel.git</developerConnection>
-      <tag>rx-easy-excel-1.0.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <properties>
